--- a/package.json
+++ b/package.json
@@ -18,26 +18,18 @@
     "eslint-plugin-react": "^7.7.0"
   },
   "dependencies": {
-    "body-scroll-lock": "^3.1.5",
-    "fs-extra": "^10.0.0",
-    "knex": "0.16.3",
-    "lodash": "^4.17.5",
-    "reactour": "^1.18.0",
-    "sqlite3": "5.0.2",
-    "strapi": "3.6.5",
-    "strapi-admin": "3.6.5",
-    "strapi-connector-bookshelf": "3.6.5",
-    "strapi-plugin-content-manager": "3.6.5",
-    "strapi-plugin-content-type-builder": "3.6.5",
-    "strapi-plugin-documentation": "3.6.5",
-    "strapi-plugin-email": "3.6.5",
-    "strapi-plugin-graphql": "3.6.5",
-    "strapi-plugin-i18n": "^3.6.5",
-    "strapi-plugin-upload": "3.6.5",
-    "strapi-plugin-users-permissions": "3.6.5",
-    "strapi-utils": "3.6.5",
-    "unzip-stream": "^0.3.0",
-    "uuid-v4": "^0.1.0"
+    "axios": "^0.21.1",
+    "strapi": "3.5.1",
+    "strapi-admin": "3.5.1",
+    "strapi-utils": "3.5.1",
+    "strapi-plugin-content-type-builder": "3.5.1",
+    "strapi-plugin-content-manager": "3.5.1",
+    "strapi-plugin-users-permissions": "3.5.1",
+    "strapi-plugin-email": "3.5.1",
+    "strapi-plugin-upload": "3.5.1",
+    "strapi-connector-bookshelf": "3.5.1",
+    "knex": "<0.20.0",
+    "sqlite3": "5.0.0"
   },
   "strapi": {},
   "engines": {
